Fix overflow issue thanks to Eric

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,8 @@
 html, body {
 	height: 100%;
 	width: 100%;
+  overflow-x: hidden;
+
 }
 
 body {
@@ -550,12 +552,11 @@ body {
 	text-align: center;
 
 
-
 }
 
 #slide-7 img{
-	height: 300px;
-	width: 400px;
+	height: 200px;
+	width: 300px;
 
 }
 
